--- a/styles/index.css
+++ b/styles/index.css
@@ -50,9 +50,8 @@ header {
 }
 
 .logo-icon {
-    width: 40px;
-    height: 40px;
-    background-color: var(--emerald);
+    width: 180px;
+    height: auto;
     border-radius: 8px;
     display: flex;
     align-items: center;
@@ -60,14 +59,9 @@ header {
     margin-right: 12px;
 }
 
-.logo-text {
-    font-weight: 700;
-    font-size: 1.5rem;
-    color: var(--gray-dark);
-}
-
-.logo-text span {
-    color: var(--emerald);
+.logo-icon img {
+    width: 100%;
+    height: auto;
 }
 
 nav ul {
